plugins {
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
    id 'com.palantir.docker' version '0.36.0'
}

group = 'fracproops.azurecr.io'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '21'
targetCompatibility = '21'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/release' }
}

ext {
    set('springCloudVersion', "2023.0.3")
}

dependencies {

    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    // --- Azure + Graph ---
    implementation 'com.microsoft.graph:microsoft-graph:6.7.0'
    implementation 'com.azure:azure-identity:1.13.1'
    implementation 'com.azure:azure-storage-blob:12.26.1'

    // --- Reactive ---
    implementation 'io.projectreactor:reactor-core'
    implementation 'io.projectreactor.netty:reactor-netty'

    // --- Utilities ---
    implementation 'org.modelmapper:modelmapper:3.2.0'
    implementation 'org.passay:passay:1.6.3'
    implementation 'dnsjava:dnsjava:3.6.1'
    implementation 'com.sendgrid:sendgrid-java:4.10.3'

    // --- Observability / Tracing ---
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    implementation 'io.zipkin.reporter2:zipkin-reporter-metrics-micrometer:3.5.1' // Fixed

    // --- Spring Boot Starters ---
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // --- Spring Cloud ---
    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
    implementation 'org.springframework.cloud:spring-cloud-config-client'
    implementation 'org.springframework.cloud:spring-cloud-stream'
    implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'

    implementation 'org.glassfish.jersey.core:jersey-client:3.1.6'
    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.6'


    // --- Resilience4j ---
    implementation 'io.github.resilience4j:resilience4j-spring-boot3'

    // --- JSON ---
    implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.17.1'

    // --- Lombok ---
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    // --- Testing ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.3'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:3.3.4"
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.register('unpack', Copy) {
    dependsOn tasks.named('bootJar')
    from(zipTree(tasks.named('bootJar').get().archiveFile))
    into('build/dependency')
}

docker {
    name "${project.group}/${project.name}"
    files 'run.sh'
    copySpec.from(tasks.bootJar.archiveFile).into(".")
    buildArgs(['JAR_FILE': tasks.bootJar.archiveFileName.get()])
}

test {
    useJUnitPlatform()
}
